# loopcat

./: .gitignore  README.md  plan.md  pyproject.toml
scripts/: fetch_themes.py
src/cat_common/: __init__.py  base16_themes.py  config.py  themes.py  widgets.py
src/fadercat/: __init__.py  __main__.py  midi.py  tui.py
src/gridcat/: __init__.py  __main__.py  midi.py  settings.py  tui.py
src/loopcat/: __init__.py  __main__.py  cli.py  config.py  converter.py  database.py  hasher.py  importer.py  models.py  player.py  tui.py
src/loopcat/analyzer/: __init__.py  gemini.py  local.py
src/loopcat/export/: __init__.py
tests/: __init__.py  test_cat_common.py  test_database.py  test_fadercat.py  test_gridcat.py  test_loopcat_refactor.py  test_player.py  test_tui.py
